# Rustatoskr

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
scripts/: rustatoskr.service
src/: chatgpt.rs  handler.rs  main.rs  message_types.rs
src/capabilities/: chat.rs  debug.rs  dump.rs  mod.rs  privacy.rs  summarize.rs
src/capabilities/chat/: chat.rs  mod.rs  prompt.txt
src/capabilities/privacy/: canned_response.txt  mod.rs
src/clients/: chatgpt.rs  embeddings.rs  mod.rs  muninn.rs  notion.rs  telegram.rs
src/layers/: embedding.rs  memory.rs  mod.rs  security.rs  selector.rs
src/repositories/: users.rs
